sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:11: error: type mismatch;
 found   : Unit
 required: Boolean
      if(i=0){i+=1}
          ^